workbench/0.1.0/dist/spec/17-memo-store.md
---
title: ".memo/"
description: "`.memo/` is the on-disk footprint of the **memo system** — an Add-on (a custom folder) generated by `memo-init`, and the recommended default mode of working ([26-addons.md](./26-addons.md)). This is..."
workbench_version: "0.1.0"
spec_file: "17-memo-store.md"
order: 17
section: "Workbench"
normative: true
generated_at: "2026-07-11T22:16:29.883Z"
generated_from: "workbench/0.1.0/draft/spec/17-memo-store.md"
generator: "scripts/generate-docs-payload.mjs"
edit_warning: "This file is auto-generated. Source: workbench/0.1.0/draft/spec/17-memo-store.md."
---


`.memo/` is the on-disk footprint of the **memo system** — an Add-on (a custom folder) generated by `memo-init`, and the recommended default mode of working ([26-addons.md](/workbench/addons/)). This is the per-folder page for `.memo/`: it specifies the folder's *role* and *top-level layout* in the workbench. The memo *lifecycle* — input, revisions, questions, phases, rollout — is the subject of the core specification ([../../v0.1.0/06-memo-structure.md](/specification/memo-structure/)) and is not restated here.

---

## Folder Contract

| Field | Value |
|-------|-------|
| Name | `.memo/` |
| Status | reserved (custom folder, default-on) |
| Level | Project |
| Entry-point | `config.json` + `memos/` |
| Convention | — |
| Purpose | The memo system's footprint, generated by `memo-init` — memos and the shared stores they draw on. |
| Goes in | Memos under `memos/<NNN-slug>/` and the shared stores (`_requirements/`, `_references/`, `chronic/`, `plans/`, …). |
| Does not | Project code (that belongs in `repos/`); `.memo/` is never itself a git repository. |

> The Folder Contract follows the fixed per-folder shape defined in the session conventions ([session/13-conventions.md](/session/conventions/)); its first six fields mirror this folder's row in the central contract table ([12-folders.md](/workbench/folders/)).

---

## The Footprint of a Custom Folder

`.memo/` is the data area the memo-system custom folder reserves in a project — generated by `memo-init`, in the pattern every custom folder follows: the tool is provided globally, and its per-project working data is written under a declared folder ([26-addons.md](/workbench/addons/)). Its dot prefix marks it as generated, local machinery — and because the project root is local, `.memo/` is **never a git repository** and its contents never leave the machine ([11-project-structure.md](/workbench/project-structure/)). The memo system is the recommended default, which is why a real project almost always carries `.memo/`; the workbench *core*, however, does not depend on it ([12-folders.md](/workbench/folders/)). In the folder contract `.memo/` is therefore listed as **reserved (custom folder, default-on)** — present by default, but a reservation of the memo custom folder rather than a bare-workbench requirement ([12-folders.md](/workbench/folders/)).

---

## Top-Level Layout

`.memo/` separates the **memos** from the **shared stores** they draw on. Memos live under `.memo/memos/`, one directory per memo; the stores sit directly under `.memo/`, independent of any single memo:

| Path | Holds |
|------|-------|
| `memos/<NNN-slug>/` | One memo each — its revisions, topics, context, transcripts, validation, and rollout working files. |
| `_requirements/` | The requirements store — registry, schema, and reports. |
| `_references/` | Shared reference material cited across memos. |
| `transcripts/` | Staged input transcripts before they become a memo or a revision. |
| `chronic/` | The narrated chronicle — a flat, append-only record across memos. |
| `plans/` | Plans, each composed of one or more finalized memos. |
| `strands/` | Emergent cross-memo strands. |
| `_archive/` | Frozen legacy material that predates the current numbering. |
| `config.json` | The project's memo configuration, including its branch/ID prefix. |

The canonical layout places memos under `.memo/memos/<NNN-slug>/`; a flat legacy layout (`<NNN-slug>/` directly under `.memo/`) **MAY** still be read for backward compatibility but is not the target for new memos.

---


<!-- IMPLEMENTED-BY — rendered backlink lives in the dist (generated/bridge/<family>/<stem>.backlink.md); source stays authored-only (F2 Dist-Split) -->
## Related

- [26-addons.md](/workbench/addons/) — the custom folder (Add-on) model `.memo/` is an instance of.
- [11-project-structure.md](/workbench/project-structure/) — why `.memo/` is never a git repository.
- [12-folders.md](/workbench/folders/) — the folder contract and the core-vs-custom folder split this page is the registered entry for.
- [../../v0.1.0/06-memo-structure.md](/specification/memo-structure/) — the memo structure and lifecycle the core specification owns.
- [../../v0.1.0/02-memo-sop-entrypoint.md](/specification/memo-sop-entrypoint/) — the memo SOP entry point.
